# MetadataServer

./: README.md
MetadataServer/: .gitignore  CMakeLists.txt  README.md  run.sh
MetadataServer/include/: assist.h  communication.h  file_structure.h
MetadataServer/src/: client.cpp  server.cpp
MetadataServer/src/lib/: CMakeLists.txt  assist.cpp  communication.cpp  file_system.cpp  metadata_server.cpp
include/: communication.h  file_system.h  metadata_server.h  metadata_system.h  system_class.h
src/: client.cpp
src/lib/: communication.cpp  file_structure.cpp  metadata_system.cpp
